--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "dev": "ts-node-dev --ignore-watch node_modules src/index.ts"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.5",
+    "eslint": "^8.0.1",
+    "eslint-plugin-vitest-globals": "^1.3.1",
+    "prettier": "3.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
