--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "build/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/index.ts"
+    "dev": "ts-node-dev --ignore-watch node_modules src/index.ts",
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
@@ -14,7 +16,9 @@
     "eslint-plugin-vitest-globals": "^1.3.1",
     "prettier": "3.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.33.0"
   },
   "dependencies": {
     "express": "^4.18.2"
