--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,14 @@
     "vitest-globals/env": true
   },
   "rules": {
-    "no-useless-constructor":"off"
+    "no-useless-constructor":"off",
+    "@typescript-eslint/no-unused-vars": ["error", {
+      "vars": "all",
+      "args": "after-used",
+      "ignoreRestSiblings": true,
+      "argsIgnorePattern": "^_",
+      "varsIgnorePattern": "^_",
+      "caughtErrorsIgnorePattern": "^_"
+    }]
   }
 }
