feat: list all exercises

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
       "argsIgnorePattern": "^_",
       "varsIgnorePattern": "^_",
       "caughtErrorsIgnorePattern": "^_"
-    }]
+    }],
+    "@typescript-eslint/no-empty-function": "off"
   }
 }
